Simplify loopback access for demo
